<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:elevation="4dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:textStyle="bold"
                android:text="Application name"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:layout_marginBottom="6dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="6dp"
                android:background="@color/light_gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:textStyle="bold"
                android:text="Version"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/version"
                android:layout_marginBottom="6dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="6dp"
                android:background="@color/light_gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:textStyle="bold"
                android:text="Group members"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/joel"
                android:layout_marginBottom="6dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dennis"
                android:layout_marginBottom="6dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/siyuan"
                android:layout_marginBottom="6dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quang"
                android:layout_marginBottom="6dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yeejing"
                android:layout_marginBottom="6dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tianwen"
                android:layout_marginBottom="6dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="6dp"
                android:background="@color/light_gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:textStyle="bold"
                android:text="About"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about"
                android:layout_marginBottom="6dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="6dp"
                android:background="@color/light_gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:textStyle="bold"
                android:text="Disclaimer"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/disclaimer"
                android:layout_marginBottom="6dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="6dp"
                android:background="@color/light_gray"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:textStyle="bold"
                android:text="Source code"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/source"
                android:layout_marginBottom="6dp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>